All updates except mmobile

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -59,3 +59,21 @@
     }
   }
 }// home
+
+
+// header
+
+.header_image {
+  height: 250px;
+  width: 100%;
+  padding-bottom: 20px;
+}
+
+.header_text {
+
+  border-bottom: 2px dashed @navigation-border;
+}
+
+
+
+// header end
