--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,17 @@
 // Mixins in here
+
+.btn {
+
+    color: white;
+    padding-top: 10px;
+    align-items: center;
+    font-size: 20px;
+    background-color: @eastern-blue;
+    border-radius: 10px;
+    height: 40px;
+    width: 75%;
+    text-align: center;
+    margin-left: 10px;
+
+
+}
