--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,18 @@
 // Navigation Styles here
+
+.navy {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    width: 96%;
+
+li {
+    font-size: 20px;
+
+}}
+
+.border {
+
+    border-bottom: 2px dashed @navigation-border;
+    width: 100%;
+}
